Fix user pics alignment issue

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -364,6 +364,7 @@ span.sender {
     align-items: end;
     overflow: visible;
     margin-top: 4px;
+    align-items: flex-end;
 }
 
 .separator {
